# tg_habit

./: .env_sample  .flake8  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: models.py  pagination.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_is_nice_alter_habit_is_public.py
users/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_id_chat.py
