[tool.poetry]
name = "tg-habit"
version = "0.1.0"
description = ""
authors = ["Alexandr Zibinin <zibinin.chel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
django = "^5.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
requests = "^2.32.3"
celery = "^5.4.0"
redis = "^5.0.8"
django-cors-headers = "^4.4.0"
flake8 = "^7.1.1"
drf-yasg = "^1.21.7"
setuptools = "^73.0.1"
coverage = "^7.6.1"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
